--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,454 @@
-<h1>New project</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-<%= render 'form' %>
+    <title>New Project</title>
 
-<%= link_to 'Back', projects_path %>
+   <link rel="stylesheet" type="text/css" href="https://s3.amazonaws.com/extrara-assets/css/bootstrap.css?X-Amz-Date=20150920T191432Z&X-Amz-Expires=300&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Signature=857a10b001ed1c78e19768372cc683c2190c77d6f95970b2d69a5f12f3ef8de2&X-Amz-Credential=ASIAJKBPH5JYJGWTV2QQ/20150920/us-east-1/s3/aws4_request&X-Amz-SignedHeaders=Host&x-amz-security-token=AQoDYXdzEKz//////////wEakALUAiiIseGNlG4IPqZ6R88dEv8Z9CiQ5E2ooYkEo16/SqSHDMP7mZmQBdwj2TXNa5zvNIFkOU9lbIBVf4lZuLBeIFkDZuhAyNhO%2BCGe/BCEJ58s80QNZbfKWue6ET/NPnq7GZrCjZvwTaUvTxjH5H23Q/HtpB6Vk5qDOK2r%2BU%2B7uU0WMsC5EaQr4tdp%2BhXs57x/HXyTFDof5ZRznhtTd6924vvN7oKH6TgtIWR12oToK1SqHYuNadc2cQ5KpA0ji5QPE/fAx3zlHpDcGyoJ7cUqULBgiJBqmCjoHl7rwbXdzrptFjIfuJztE3rB3sJagzpOwCZlF2GJwLb6XG6XsSr8/pRtPpAbXAQf3rys1zb84yCf/vuvBQ%3D%3D">    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+  </head>
+
+  <body>
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+            <a class="navbar-brand" href="/">EXTRARA</a>
+         <!-- <a class="navbar-brand" href="#">EXTRARA</a> -->
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/forum">Discover</a></li>
+            <li><a href="/">Create</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/"></a></li>
+            <li><a href="../navbar-static-top/"></a></li>
+             <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aaron <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li> <li class="active"> <a href="/users/2">Profile</a> <span class="sr-only"></span></li></li>
+                <li><a href="#">Inbox</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header"></li>
+                <li><a href="#">Edit</a></li>
+                <li><a> <a href="/users/sign_out">Sign out</a>
+</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class"container">
+    <div class="prof-jumbotron">
+      <div class="container">
+        <div class="NewProjectTitle">What are you working on?</div>
+      </div>
+         
+    </div>
+
+
+  </div>
+
+
+
+  <!--BEGINNING OF FORM-->
+
+<div class="container">
+  <div class="">
+
+
+
+<form accept-charset="UTF-8" action="/projects" class="simple_form new_project" id="new_project" method="post" novalidate="novalidate"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="hy5tNV3VPXGqWa4BWubz4cX9lK0247kdHRV4bNWaSKg=" /></div>
+  
+<%= simple_form_for(@project) do |f| %>
+  <%= f.error_notification %>
+
+  <div class="form-inputs">
+    <div class="form-group string optional project_title"><label class="string optional control-label" for="project_title">Title</label><%= f.input :title %>
+</div>
+    
+
+    <!--Merge with below<div class="form-group string optional project_subtitle"><label class="string optional control-label" for="project_subtitle"></label><input class="string optional form-control" id="project_subtitle" name="project[subtitle]" type="text" /></div> -->
+          
+
+          <div class="form-group">
+            <label class=" control-label" for="textarea">Description</label>
+            <div class="">                     
+              <textarea class="form-control" id="textarea" name="textarea"></textarea>
+            </div>
+          </div> <!--Merge with above--> 
+
+           <!--Merge with Below <div class="form-group string optional project_s1"><label class="string optional control-label" for="project_s1">Type</label><input class="string optional form-control" id="project_s1" name="project[s1]" type="text" /></div>
+    <div class="form-group">-->
+
+
+           <label class=" control-label" for="selectbasic">Type</label>
+            <div class="">
+              <select id="selectbasic" name="selectbasic" class="form-control">
+                <option value="0"></option>
+                <option value="1">Software</option>
+                <option value="3">Hardware</option>
+                <option value="4">Astronomy</option>
+                <option value="5">Rocketry</option>
+                <option value="6">3D Printing</option>
+                <option value="7">Other</option>
+                
+  
+
+              </select>
+            </div>
+
+    <!--<div class="form-group string optional project_des"><label class="string optional control-label" for="project_des">Location</label><input class="string optional form-control" id="project_des" name="project[des]" type="text" /></div>
+          Create Dropdown for Country-->
+
+ <label class=" control-label" for="selectbasic">Location</label>
+            <div class="">
+              <select id="selectbasic" name="selectbasic" class="form-control">  
+              <option value=""></option> 
+              <option value="AF">Afghanistan</option>
+              <option value="AX">Åland Islands</option>
+              <option value="AL">Albania</option>
+              <option value="DZ">Algeria</option>
+              <option value="AS">American Samoa</option>
+              <option value="AD">Andorra</option>
+              <option value="AO">Angola</option>
+              <option value="AI">Anguilla</option>
+              <option value="AQ">Antarctica</option>
+              <option value="AG">Antigua and Barbuda</option>
+              <option value="AM">Armenia</option>
+              <option value="AR">Argentina</option>
+              <option value="AW">Aruba</option>
+              <option value="AU">Australia</option>
+              <option value="AT">Austria</option>
+              <option value="AZ">Azerbaijan</option>
+              <option value="BS">Bahamas</option>
+              <option value="BH">Bahrain</option>
+              <option value="BD">Bangladesh</option>
+              <option value="BB">Barbados</option>
+              <option value="BY">Belarus</option>
+              <option value="BE">Belgium</option>
+              <option value="BZ">Belize</option>
+  <option value="BJ">Benin</option>
+  <option value="BM">Bermuda</option>
+  <option value="BT">Bhutan</option>
+  <option value="BO">Bolivia, Plurinational State of</option>
+  <option value="BQ">Bonaire, Sint Eustatius and Saba</option>
+  <option value="BA">Bosnia and Herzegovina</option>
+  <option value="BW">Botswana</option>
+  <option value="BV">Bouvet Island</option>
+  <option value="BR">Brazil</option>
+  <option value="IO">British Indian Ocean Territory</option>
+  <option value="BN">Brunei Darussalam</option>
+  <option value="BG">Bulgaria</option>
+  <option value="BF">Burkina Faso</option>
+  <option value="BI">Burundi</option>
+  <option value="KH">Cambodia</option>
+  <option value="CM">Cameroon</option>
+  <option value="CA">Canada</option>
+  <option value="CV">Cape Verde</option>
+  <option value="KY">Cayman Islands</option>
+  <option value="CF">Central African Republic</option>
+  <option value="TD">Chad</option>
+  <option value="CL">Chile</option>
+  <option value="CN">China</option>
+  <option value="CX">Christmas Island</option>
+  <option value="CC">Cocos (Keeling) Islands</option>
+  <option value="CO">Colombia</option>
+  <option value="KM">Comoros</option>
+  <option value="CG">Congo</option>
+  <option value="CD">Congo, the Democratic Republic of the</option>
+  <option value="CK">Cook Islands</option>
+  <option value="CR">Costa Rica</option>
+  <option value="CI">Côte d'Ivoire</option>
+  <option value="HR">Croatia</option>
+  <option value="CU">Cuba</option>
+  <option value="CW">Curaçao</option>
+  <option value="CY">Cyprus</option>
+  <option value="CZ">Czech Republic</option>
+  <option value="DK">Denmark</option>
+  <option value="DJ">Djibouti</option>
+  <option value="DM">Dominica</option>
+  <option value="DO">Dominican Republic</option>
+  <option value="EC">Ecuador</option>
+  <option value="EG">Egypt</option>
+  <option value="SV">El Salvador</option>
+  <option value="GQ">Equatorial Guinea</option>
+  <option value="ER">Eritrea</option>
+  <option value="EE">Estonia</option>
+  <option value="ET">Ethiopia</option>
+  <option value="FK">Falkland Islands (Malvinas)</option>
+  <option value="FO">Faroe Islands</option>
+  <option value="FJ">Fiji</option>
+  <option value="FI">Finland</option>
+  <option value="FR">France</option>
+  <option value="GF">French Guiana</option>
+  <option value="PF">French Polynesia</option>
+  <option value="TF">French Southern Territories</option>
+  <option value="GA">Gabon</option>
+  <option value="GM">Gambia</option>
+  <option value="GE">Georgia</option>
+  <option value="DE">Germany</option>
+  <option value="GH">Ghana</option>
+  <option value="GI">Gibraltar</option>
+  <option value="GR">Greece</option>
+  <option value="GL">Greenland</option>
+  <option value="GD">Grenada</option>
+  <option value="GP">Guadeloupe</option>
+  <option value="GU">Guam</option>
+  <option value="GT">Guatemala</option>
+  <option value="GG">Guernsey</option>
+  <option value="GN">Guinea</option>
+  <option value="GW">Guinea-Bissau</option>
+  <option value="GY">Guyana</option>
+  <option value="HT">Haiti</option>
+  <option value="HM">Heard Island and McDonald Islands</option>
+  <option value="VA">Holy See (Vatican City State)</option>
+  <option value="HN">Honduras</option>
+  <option value="HK">Hong Kong</option>
+  <option value="HU">Hungary</option>
+  <option value="IS">Iceland</option>
+  <option value="IN">India</option>
+  <option value="ID">Indonesia</option>
+  <option value="IR">Iran, Islamic Republic of</option>
+  <option value="IQ">Iraq</option>
+  <option value="IE">Ireland</option>
+  <option value="IM">Isle of Man</option>
+  <option value="IL">Israel</option>
+  <option value="IT">Italy</option>
+  <option value="JM">Jamaica</option>
+  <option value="JP">Japan</option>
+  <option value="JE">Jersey</option>
+  <option value="JO">Jordan</option>
+  <option value="KZ">Kazakhstan</option>
+  <option value="KE">Kenya</option>
+  <option value="KI">Kiribati</option>
+  <option value="KP">Korea, Democratic People's Republic of</option>
+  <option value="KR">Korea, Republic of</option>
+  <option value="KW">Kuwait</option>
+  <option value="KG">Kyrgyzstan</option>
+  <option value="LA">Lao People's Democratic Republic</option>
+  <option value="LV">Latvia</option>
+  <option value="LB">Lebanon</option>
+  <option value="LS">Lesotho</option>
+  <option value="LR">Liberia</option>
+  <option value="LY">Libya</option>
+  <option value="LI">Liechtenstein</option>
+  <option value="LT">Lithuania</option>
+  <option value="LU">Luxembourg</option>
+  <option value="MO">Macao</option>
+  <option value="MK">Macedonia, the former Yugoslav Republic of</option>
+  <option value="MG">Madagascar</option>
+  <option value="MW">Malawi</option>
+  <option value="MY">Malaysia</option>
+  <option value="MV">Maldives</option>
+  <option value="ML">Mali</option>
+  <option value="MT">Malta</option>
+  <option value="MH">Marshall Islands</option>
+  <option value="MQ">Martinique</option>
+  <option value="MR">Mauritania</option>
+  <option value="MU">Mauritius</option>
+  <option value="YT">Mayotte</option>
+  <option value="MX">Mexico</option>
+  <option value="FM">Micronesia, Federated States of</option>
+  <option value="MD">Moldova, Republic of</option>
+  <option value="MC">Monaco</option>
+  <option value="MN">Mongolia</option>
+  <option value="ME">Montenegro</option>
+  <option value="MS">Montserrat</option>
+  <option value="MA">Morocco</option>
+  <option value="MZ">Mozambique</option>
+  <option value="MM">Myanmar</option>
+  <option value="NA">Namibia</option>
+  <option value="NR">Nauru</option>
+  <option value="NP">Nepal</option>
+  <option value="NL">Netherlands</option>
+  <option value="NC">New Caledonia</option>
+  <option value="NZ">New Zealand</option>
+  <option value="NI">Nicaragua</option>
+  <option value="NE">Niger</option>
+  <option value="NG">Nigeria</option>
+  <option value="NU">Niue</option>
+  <option value="NF">Norfolk Island</option>
+  <option value="MP">Northern Mariana Islands</option>
+  <option value="NO">Norway</option>
+  <option value="OM">Oman</option>
+  <option value="PK">Pakistan</option>
+  <option value="PW">Palau</option>
+  <option value="PS">Palestinian Territory, Occupied</option>
+  <option value="PA">Panama</option>
+  <option value="PG">Papua New Guinea</option>
+  <option value="PY">Paraguay</option>
+  <option value="PE">Peru</option>
+  <option value="PH">Philippines</option>
+  <option value="PN">Pitcairn</option>
+  <option value="PL">Poland</option>
+  <option value="PT">Portugal</option>
+  <option value="PR">Puerto Rico</option>
+  <option value="QA">Qatar</option>
+  <option value="RE">Réunion</option>
+  <option value="RO">Romania</option>
+  <option value="RU">Russian Federation</option>
+  <option value="RW">Rwanda</option>
+  <option value="BL">Saint Barthélemy</option>
+  <option value="SH">Saint Helena, Ascension and Tristan da Cunha</option>
+  <option value="KN">Saint Kitts and Nevis</option>
+  <option value="LC">Saint Lucia</option>
+  <option value="MF">Saint Martin (French part)</option>
+  <option value="PM">Saint Pierre and Miquelon</option>
+  <option value="VC">Saint Vincent and the Grenadines</option>
+  <option value="WS">Samoa</option>
+  <option value="SM">San Marino</option>
+  <option value="ST">Sao Tome and Principe</option>
+  <option value="SA">Saudi Arabia</option>
+  <option value="SN">Senegal</option>
+  <option value="RS">Serbia</option>
+  <option value="SC">Seychelles</option>
+  <option value="SL">Sierra Leone</option>
+  <option value="SG">Singapore</option>
+  <option value="SX">Sint Maarten (Dutch part)</option>
+  <option value="SK">Slovakia</option>
+  <option value="SI">Slovenia</option>
+  <option value="SB">Solomon Islands</option>
+  <option value="SO">Somalia</option>
+  <option value="ZA">South Africa</option>
+  <option value="GS">South Georgia and the South Sandwich Islands</option>
+  <option value="SS">South Sudan</option>
+  <option value="ES">Spain</option>
+  <option value="LK">Sri Lanka</option>
+  <option value="SD">Sudan</option>
+  <option value="SR">Suriname</option>
+  <option value="SJ">Svalbard and Jan Mayen</option>
+  <option value="SZ">Swaziland</option>
+  <option value="SE">Sweden</option>
+  <option value="CH">Switzerland</option>
+  <option value="SY">Syrian Arab Republic</option>
+  <option value="TW">Taiwan, Province of China</option>
+  <option value="TJ">Tajikistan</option>
+  <option value="TZ">Tanzania, United Republic of</option>
+  <option value="TH">Thailand</option>
+  <option value="TL">Timor-Leste</option>
+  <option value="TG">Togo</option>
+  <option value="TK">Tokelau</option>
+  <option value="TO">Tonga</option>
+  <option value="TT">Trinidad and Tobago</option>
+  <option value="TN">Tunisia</option>
+  <option value="TR">Turkey</option>
+  <option value="TM">Turkmenistan</option>
+  <option value="TC">Turks and Caicos Islands</option>
+  <option value="TV">Tuvalu</option>
+  <option value="UG">Uganda</option>
+  <option value="UA">Ukraine</option>
+  <option value="AE">United Arab Emirates</option>
+  <option value="GB">United Kingdom</option>
+  <option value="US">United States</option>
+  <option value="UM">United States Minor Outlying Islands</option>
+  <option value="UY">Uruguay</option>
+  <option value="UZ">Uzbekistan</option>
+  <option value="VU">Vanuatu</option>
+  <option value="VE">Venezuela, Bolivarian Republic of</option>
+  <option value="VN">Viet Nam</option>
+  <option value="VG">Virgin Islands, British</option>
+  <option value="VI">Virgin Islands, U.S.</option>
+  <option value="WF">Wallis and Futuna</option>
+  <option value="EH">Western Sahara</option>
+  <option value="YE">Yemen</option>
+  <option value="ZM">Zambia</option>
+  <option value="ZW">Zimbabwe</option>
+  
+</select>
+            </div>
+          </div>
+
+
+   <!-- <div class="form-group string optional project_s2"><label class="string optional control-label" for="project_s2">S2</label><input class="string optional form-control" id="project_s2" name="project[s2]" type="text" /></div>
+    <div class="form-group string optional project_s3"><label class="string optional control-label" for="project_s3">S3</label><input class="string optional form-control" id="project_s3" name="project[s3]" type="text" /></div>
+    <div class="form-group string optional project_s4"><label class="string optional control-label" for="project_s4">S4</label><input class="string optional form-control" id="project_s4" name="project[s4]" type="text" /></div>
+    <div class="form-group string optional project_s5"><label class="string optional control-label" for="project_s5">S5</label><input class="string optional form-control" id="project_s5" name="project[s5]" type="text" /></div>-->
+  
+  <div class="form-actions">
+
+    <div class="field">
+    Add photo
+    <input id="user_image" name="user[image]" type="file" />
+  </div>
+
+  <p></p>
+   <%= f.button :submit %>
+<% end %>
+
+  </div>
+</form>
+
+</div>
+
+
+
+<hr>
+
+ 
+<div class="container">
+<div class="row">
+        <div class="project-help">
+          <h3>Project Guidebook</h3>
+          <p>Check out our Guidebook for some help getting started.</p>
+          <p><a class="btn btn-default" href="#" role="button">More</a></p>
+       </div>
+        <div class="project-help">
+          <h3>Our Rules</h3>
+          <p>A few simple rules for your new project.</p>
+          <p><a class="btn btn-default" href="#" role="button">More</a></p>
+       </div>
+        <div class="project-help">
+          <h3>Terms</h3>
+          <p>Donec sed odio dui.</p>
+          <p><a class="btn btn-default" href="#" role="button">More</a></p>
+        </div>
+      </div>
+
+    </div>
+
+      <hr>
+      <footer>
+        <p>&copy; EXTRARA 2015</p>
+      </footer>
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
