--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,35 +22,26 @@
 <p class="form-title">Sign Up</p>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html=> {multipart: true}) do |f| %>
   <%= devise_error_messages! %>
-
+</br>
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <%= f.text_field :firstname, autofocus: true, placeholder: "first name" %>
+  </div></br>
+  <div class="field">
+    <%= f.text_field :lastname, autofocus: true, placeholder: "last name" %>
+  </div></br>
 <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :firstname, autofocus: true %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :lastname, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, placeholder: "email" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="field"></br>
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: "password" %>
+  </div></br>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-  <div class="field">
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "cofirm password" %>
   </div>
   <div class="actions">
     <%= f.submit "Sign up" %>
