--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forums/">Forum</a></li>
+            <li><a href="/forums/">Discover</a></li>
             <li><a href="/projects/new">Create</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
