--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -34,10 +34,15 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forums">Forum</a></li>
-            <li><a href="/projects">Projects</a></li>
+            <li><a href="/forums/">Discover</a></li>
+            <li><a href="/projects/new">Create</a></li>
+            
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/"></a></li>
+            <li><a href="../navbar-static-top/"></a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.firstname%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
@@ -47,12 +52,7 @@
                 <li><a href="#">Log Out</a></li>
                 <li><a href="#"></a></li>
               </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/"></a></li>
-            <li><a href="../navbar-static-top/"></a></li>
-            <li class="active"><%=link_to (current_user.name), user_path(current_user.id)%>  <span class="sr-only">(current)</span></li>
+            </li> <span class="sr-only">(current)</span></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
