--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -42,16 +42,24 @@
             <li><a href="../navbar/"></a></li>
             <li><a href="../navbar-static-top/"></a></li>
                         <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.firstname%> <span class="caret"></span></a>
+              <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.firstname%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li> <li class="active"> <%=link_to current_user.fullname, user_path(current_user.id)%> <span class="sr-only"></span></li></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
-                <li><a> <%= link_to 'Sign out', destroy_user_session_path %>
+                <li><a> <%= link_to 'fadsf', destroy_user_session_path %>
                 <li><a href="#"></a></li>
-              </ul>
+              </ul>-->
+              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Profile <span class="caret"></span></a>
+                            <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                                <li><a href="#">Inbox </a></li>
+                                <li><a href="#">Edit Profile</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Sign Out</a></li>
+                            </ul>
+                        </li>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -96,6 +104,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
