--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -42,7 +42,7 @@
             <li><a href="../navbar/"></a></li>
             <li><a href="../navbar-static-top/"></a></li>
                         <li class="dropdown">
-              <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.firstname%> <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.firstname%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li> <li class="active"> <%=link_to current_user.fullname, user_path(current_user.id)%> <span class="sr-only"></span></li></li>
                 <li><a href="#">Another action</a></li>
@@ -51,15 +51,7 @@
                 <li class="dropdown-header">Nav header</li>
                 <li><a> <%= link_to 'fadsf', destroy_user_session_path %>
                 <li><a href="#"></a></li>
-              </ul>-->
-              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Profile <span class="caret"></span></a>
-                            <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                                <li><a href="#">Inbox </a></li>
-                                <li><a href="#">Edit Profile</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Sign Out</a></li>
-                            </ul>
-                        </li>
+              </ul>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
